fixed spacing for why section

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,9 @@ section a {
 }
 
 h2 {
+  margin-top: 2.5em;
   font-size: 2em;
+  margin-bottom: 2.5em;
 }
 
 .divider {
@@ -115,24 +117,35 @@ h2 {
 }
 
 .why {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
+  /* width: min-content; */
+  /* height: min-content; */
   display: grid;
   justify-items: start;
-  width: 100%;
+  width: 95%;
   grid-template-columns: repeat(3, 1fr);
+  /* padding:20px; */
   /* justify-content: space-between; */
+  margin-bottom: 3.2em;
 }
 
 .why > li {
-  border: 1px solid blue;
+  border: 1px solid green;
   display: flex;
+  /* height: min-content; */
+  /* width: min-content; */
+  /* height: min-content;    this one is good, but not even */
+
+
 }
 
 .why .image-text {
   text-align: left;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
+  padding-left: .5em;
+  padding-right: 7em;
 }
 
 section .image-text {
-  font-size: 1.2em;
+  font-size: 1.4em;
 }
